--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -2,29 +2,35 @@
 <html >
 <head>
   <meta charset="UTF-8">
-      <link rel="stylesheet" href="static/css/style3.css">
+  
+      <link rel="stylesheet" href="static/css/style2.css">
+
 </head>
+
 <body>
-	<div class="preloader">
+  <div class="preloader">
 		<div class="preloader__row">
 		  <div class="preloader__item"></div>
 		  <div class="preloader__item"></div>
 		</div>
+    <script>
+      window.onload = function () {
+        document.body.classList.add('loaded_hiding');
+        window.setTimeout(function () {
+        document.body.classList.add('loaded');
+        document.body.classList.remove('loaded_hiding');
+        }, 500);
+      }
+      </script>
 	  </div>
-  <h1 style="color:#ecf0f1", style="font-family:Verdana, Geneva, Tahoma, sans-serif">{{ text }}</h1>
-<div id="wrapper" style="top: 400px;">
-	<form name="signin" method="post" action="">
-		<input name="submit_button" type="submit" style="left:0px" value="Загрузить" class="floating-button">
+  <h1 style=color:#ecf0f1, style="font-family:Verdana, Geneva, Tahoma, sans-serif;">{{title}}</h1>
+<div id="wrapper">
+	<form id="signin" method="post" action="" autocomplete="off">
+		<h2 style="color:black; text-align: center; font-size: 32px; margin-left: -80px;" type="text"> {{json}}</h2>	
+    <a href="remoter" style="left:5px" class="floating-button">Вернуться</a>	  
 	</form>
-	<script>
-		window.onload = function () {
-		  document.body.classList.add('loaded_hiding');
-		  window.setTimeout(function () {
-			document.body.classList.add('loaded');
-			document.body.classList.remove('loaded_hiding');
-		  }, 500);
-		}
-	  </script>
 </div>
+  
+  
 </body>
 </html>
