db communication and front

--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -5,6 +5,7 @@
       <link rel="stylesheet" href="static/css/style2.css">
 </head>
 
+<label hidden id="flats">{{ flats }}</label>
 <body>
   <div class="preloader">
 		<div class="preloader__row">
@@ -21,14 +22,17 @@
       }
       </script>
 	  </div>
-  <h1 style=color:#ecf0f1, style="font-family:Verdana, Geneva, Tahoma, sans-serif;">{{title}}</h1>
-<div id="wrapper">
-	<form id="signin" method="post" action="" autocomplete="off">
-		<h2 style="color:black; text-align: center; font-size: 32px; margin-left: -80px;" type="text"> {{json}}</h2>
-    <a href="remoter" style="left:5px" class="floating-button">Вернуться</a>
+
+  <h1 style=color:#ecf0f1, style="font-family:Verdana, Geneva, Tahoma, sans-serif;">Выберите номер квартиры</h1>
+  <form action="home" name="flats" style="margin-left: 27px" method="POST">
+	{% for flat in flats %}
+	  	<button value={{ flat }} name="flat_button" class="floating-button"> {{ flat }} </button>
+	{% endfor %}
+  </form>
+	<form action="remoter" autocomplete="off">
+    	<button value=flat class="floating-button" style="display: block; margin-left: auto; margin-right: auto;"> Вернуться </button>
 	</form>
 </div>
-
 
 </body>
 </html>
