--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -27,7 +27,7 @@
 <div id="wrapper">
 	<form id="signin" method="post" action="" autocomplete="off">
 		<h2 style="color:black; text-align: center; font-size: 32px; margin-left: -80px;" type="text"> {{json}}</h2>	
-    <a href="remoter" style="left:5px" class="floating-button">Вернуться</a>	  
+    <a  href="javascript:history.back()" style="left:5px" class="floating-button">Вернуться</a>
 	</form>
 </div>
   
