--- a/server/templates/remoter.html
+++ b/server/templates/remoter.html
@@ -15,7 +15,8 @@
   
 <div id="wrapper" style="top: 40%; margin-top: -70px;">
 	<form id="signin" method="post" action="" autocomplete="off">
-		<a href="/" style="left:-33px" class="floating-button">Измельчить</a>
+		<a href="home" style="margin-left: -14px;" class="floating-button">Дом</a>
+		<a href="/" style="margin-left: 19px;" class="floating-button">Измельчить</a>
 		<a href="conveer" class="floating-button">Конвейер</a>
 		<a href="blade" class="floating-button">Резак</a>
 		<a href="ejection" class="floating-button">Выброс</a> 
