--- a/server/static/css/style2.css
+++ b/server/static/css/style2.css
@@ -238,8 +238,9 @@ body {
 	background-color: #34495e;
 }
 .floating-button {
+  display: flex;
   display: inline-block;
-	height: 50px;
+  height: 50px;
   line-height: 50px;
   position: relative;
   border: 1px solid white;
@@ -276,6 +277,7 @@ body {
 }
 
 .button {
+  display: flex;
   min-width: 300px;
   min-height: 60px;
   font-family: 'Nunito', sans-serif;
@@ -296,47 +298,6 @@ body {
   padding: 10px;
   }
 
-button::before {
-content: '';
-  border-radius: 1000px;
-  min-width: calc(300px + 12px);
-  min-height: calc(60px + 12px);
-  border: 6px solid #2EE59D;
-  box-shadow: 0 0 60px #2EE59D;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  transition: all .3s ease-in-out 0s;
-}
-
-.button:hover, .button:focus {
-  color: #313133;
-  transform: translateY(-6px);
-}
-
-button:hover::before, button:focus::before {
-  opacity: 1;
-}
-
-button::after {
-  content: '';
-  width: 30px; height: 30px;
-  border-radius: 100%;
-  border: 6px solid #2EE59D;
-  position: absolute;
-  z-index: -1;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  animation: ring 1.5s infinite;
-}
-
-button:hover::after, button:focus::after {
-  animation: none;
-  display: none;
-}
 
 @keyframes ring {
   0% {
