flats and house number in db, config import

--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -78,7 +78,9 @@
 	font-family: 'Open Sans', 'sans-serif', 'FontAwesome';
 }
 body {
+    overflow: hidden;
   }
+
 h1{
 	color: rgb(255, 255, 255);
 	margin: 20px auto 0;
