--- a/server/templates/remoter.html
+++ b/server/templates/remoter.html
@@ -17,14 +17,14 @@
 	<form id="signin" method="post" action="" autocomplete="off">
 		<a href="home" style="margin-left: -14px;" class="floating-button">Дом</a>
 		<a href="/" style="margin-left: 19px;" class="floating-button">Измельчить</a>
+		<a href ="export" class="floating-button">Экспорт</a>
+		<a href ="update_flats" class="floating-button">Обновить</a>
 		<a href="conveer" class="floating-button">Конвейер</a>
 		<a href="blade" class="floating-button">Резак</a>
 		<a href="ejection" class="floating-button">Выброс</a> 
 		<a href="weight" class="floating-button">Вес</a>
 		<a href="check" class="floating-button">Наличие</a>
 		<a href="stop" class="floating-button">Стоп</a>
-		<!-- <a href="stop" class="floating-button">Остановить</a> -->
-		<!-- <a href="software_blocker" class="floating-button">Блокировщик</a> -->
 		
 	</form>
 	<script>
