export, cfg, styles, ard, fix

--- a/server/templates/remoter.html
+++ b/server/templates/remoter.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
   <meta charset="UTF-8">
       <link rel="stylesheet" href="static/css/style3.css">
@@ -15,8 +15,7 @@
   
 <div id="wrapper" style="top: 40%; margin-top: -70px;">
 	<form id="signin" method="post" action="" autocomplete="off">
-		<a href="home" style="margin-left: -14px;" class="floating-button">Дом</a>
-		<a href="/" style="margin-left: 19px;" class="floating-button">Измельчить</a>
+		<a href="/" style="margin-left: -14px;" class="floating-button">Дом</a>
 		<a href ="export" class="floating-button">Экспорт</a>
 		<a href ="update_flats" class="floating-button">Обновить</a>
 		<a href="conveer" class="floating-button">Конвейер</a>
