--- a/server/templates/software_blocker.html
+++ b/server/templates/software_blocker.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
   <meta charset="UTF-8">
   
@@ -16,7 +16,7 @@
 	  </div>
   <h1 style="color: #ecf0f1", style="font-family:Verdana, Geneva, Tahoma, sans-serif">Програмный блокировщик</h1>
 <div id="wrapper">
-	<form id="signin" method="post" action="" autocomplete="off">
+	<form id="signin" z" action="" autocomplete="off">
 		<label style="color: #ecf0f1; position:relative; top:4px; right:4px;", type="text"> Выберите активность</label>
 		<label class="switch">
 			<input type="checkbox" name="checkbox">
