--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
   <meta charset="UTF-8">
-  
-      <link rel="stylesheet" href="static/css/style2.css">
-
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style2.css') }}">
 </head>
 
 <body>
